...
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:textColor="?attr/colorError"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingBottom="8dp" />
...
